refactor: 使用 egg 重构整个项目

--- a/package.json
+++ b/package.json
@@ -1,47 +1,60 @@
 {
-  "name": "app",
-  "version": "1.0.0",
+  "name": "node-puppeteer-poster",
+  "version": "1.1.0",
   "description": "",
   "private": true,
   "egg": {
+    "typescript": true,
     "declarations": true
   },
+  "scripts": {
+    "start": "egg-scripts start --daemon --title=egg-server-poster",
+    "stop": "egg-scripts stop --title=egg-server-poster",
+    "dev": "egg-bin dev",
+    "debug": "egg-bin debug",
+    "test-local": "egg-bin test",
+    "test": "npm run lint -- --fix && npm run test-local",
+    "cov": "egg-bin cov",
+    "tsc": "ets && tsc -p tsconfig.json",
+    "ci": "npm run lint && npm run cov && npm run tsc",
+    "autod": "autod",
+    "lint": "tslint --project . -c tslint.json",
+    "clean": "ets clean"
+  },
   "dependencies": {
-    "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0",
-    "puppeteer": "^1.19.0"
+    "crypto": "^1.0.1",
+    "egg": "^2.6.1",
+    "egg-scripts": "^2.6.0",
+    "puppeteer": "^2.1.1"
   },
   "devDependencies": {
+    "@types/mocha": "^2.2.40",
+    "@types/node": "^7.0.12",
+    "@types/puppeteer": "^2.0.1",
+    "@types/supertest": "^2.0.0",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
     "egg-bin": "^4.11.0",
-    "egg-ci": "^1.11.0",
-    "egg-mock": "^3.21.0",
-    "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "egg-ci": "^1.8.0",
+    "egg-mock": "^3.16.0",
+    "tslib": "^1.9.0",
+    "tslint": "^5.0.0",
+    "tslint-config-egg": "^1.0.0",
+    "typescript": "^3.0.0"
   },
   "engines": {
-    "node": ">=10.0.0"
-  },
-  "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-app",
-    "stop": "egg-scripts stop --title=egg-server-app",
-    "dev": "egg-bin dev",
-    "debug": "egg-bin debug",
-    "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "egg-bin test",
-    "cov": "egg-bin cov",
-    "lint": "eslint .",
-    "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "node": ">=8.9.0"
   },
   "ci": {
-    "version": "10"
+    "version": "8"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/falost/node-puppeteer-poster"
   },
-  "author": "",
+  "eslintIgnore": [
+    "coverage"
+  ],
+  "author": "falost",
   "license": "MIT"
 }
